# Autopilot

./: .gitignore  CMakeLists.txt  README.md  configure.py  launcher.cpp  run_unit_tests.py
Code/: CMakeLists.txt
Code/Source/: CMakeLists.txt
Code/Source/Common/: BitUtils.hpp  CMakeLists.txt  FileWatcher.cpp  FileWatcher.hpp  FlagModifier.hpp  ISettings.cpp  ISettings.hpp  MtCmdQueue.cpp  MtCmdQueue.hpp  MtQueue.hpp  SimpleObjectPool.hpp  Timer.cpp  Timer.hpp
Code/Source/Common/cmake/: ATLCoreCommonConfig.cmake.in
Code/Source/Comms/: CMakeLists.txt  UDPClientThread.cpp  UDPClientThread.hpp  UDPMessage.hpp
Code/Source/Comms/cmake/: ATLCoreCommsConfig.cmake.in
Code/Source/FlightController/: launcher.cpp
Code/Source/FlightController/FController/: CMakeLists.txt
Code/Source/GroundStation/: CMakeLists.txt
Code/Source/GroundStation/Comms/: CMakeLists.txt  SerialPort.cpp  SerialPort.hpp
Code/Source/GroundStation/Gui/: CMakeLists.txt
Code/Source/Math/: BoundBox2D.cpp  BoundBox2D.hpp  BoundBox3D.cpp  BoundBox3D.hpp  BoundSphere.cpp  BoundSphere.hpp  CMakeLists.txt  Colour.cpp  Colour.hpp  ColourCommon.hpp  Controllers.hpp  Dynamics.cpp  Dynamics.hpp  GlobalPosition.cpp  GlobalPosition.hpp  ISAData.hpp  LinearColour.cpp  LinearColour.hpp  Math.cpp  Math.hpp
Code/Source/Math/cmake/: ATLCoreMathConfig.cmake.in
Code/Source/Multithreading/: CMakeLists.txt  Fence.cpp  Fence.hpp  Semaphore.cpp  Semaphore.hpp  SpinLock.cpp  SpinLock.hpp
Code/Source/Multithreading/cmake/: ATLCoreMultithreadingConfig.cmake.in
Code/Source/Templates/: CMakeLists.txt  Counter.hpp  NonCopyableMovable.hpp  Singleton.hpp  empty.cpp
Code/Source/Templates/cmake/: ATLCoreTemplatesConfig.cmake.in
Code/Test/: CMakeLists.txt
Code/Test/Common/: CMakeLists.txt
Code/Test/Common/FlagModifier/: CMakeLists.txt  MainFlagModifier.cpp
Source/: CMakeLists.txt
Source/Core/: CMakeLists.txt  CTimer.cpp  CTimer.hpp  Core.hpp  ISAData.hpp  ISARaw.txt  ISATable.cpp  ISATable.hpp
Source/Core/Comms/: CMakeLists.txt  General.cpp  General.hpp
Source/Core/Math/: CMakeLists.txt  Controllers.hpp  Dynamics.cpp  Dynamics.hpp  GlobalPosition.cpp  GlobalPosition.hpp  Math.cpp  Math.hpp
Source/Core/Timer/: CTimer.cpp  CTimer.hpp
Source/FlightController/: CMakeLists.txt  launcher.cpp
Source/FlightController/Comms/: CMakeLists.txt
Source/GroundStation/: SerialPort.cpp  SerialPort.hpp
